# demsf-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  download.rs  lib.rs  main.rs  unzip.rs
