[package]
name = "demsf-rs"
version = "1.0.1"
edition = "2021"
authors = ["The Rust Project Developers", "Andrew Gallant <jamslam@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/phlbrz/demsf-rs"
documentation = "https://docs.rs/demsf-rs"
homepage = "https://github.com/phlbrz/demsf-rs"
description = """
A rewrite of https://github.com/phlbrz/demsf - DEMSF are bash scripts to Download and extract Microsoft Sharepoint file.
"""
categories = ["command-line-utilities","compression", "config", "development-tools"]
keywords = ["microsoft", "sharepoint", "download", "extract"]
autotests = false
exclude = ["/.github/*"]
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
regex = "1.9"
zip = "0.6"
log = "0.4"
env_logger = "0.10"
